[tool.poetry]
name = "pumppistatus"
version = "0.1.0"
description = ""
authors = ["Aaro Koivukangas <aaro.koivukangas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
